Fix dev deployment failure in case of multiple ssh keys
If there are 5+ keys under ~/.ssh to make the deployment work
-o IdentitiesOnly=yes has to be passed to the ssh configuration.
Unfortunately having this in config is not enough, but adding
this argument for rsync command as well solves the issue.

--- a/ansible/playbooks/create-public-worker.yaml
+++ b/ansible/playbooks/create-public-worker.yaml
@@ -40,12 +40,14 @@
       add_host:
         hostname: "{{ item.public_ip_address }}"
         groupname: "{{ worker_group_name }}"
+        ansible_ssh_extra_args: "-o IdentitiesOnly=yes"
       loop: "{{ ec2.instances }}"
 
     - name: Add new instance to host group
       add_host:
         hostname: "{{ item.public_ip_address }}"
         groupname: new_workers
+        ansible_ssh_extra_args: "-o IdentitiesOnly=yes"
       loop: "{{ ec2.instances }}"
 
 #
