--- a/ansible/inventory/fedora_aws_ec2.yaml
+++ b/ansible/inventory/fedora_aws_ec2.yaml
@@ -42,3 +42,11 @@ groups:
     and tags.ServiceComponent == "Server"
     and tags.ServicePhase == "Dev"
     and lookup('env', 'USER') in tags.Name
+  testing_farm_staging_public_workers:
+    tags.ServiceOwner == "TFT"
+    and tags.ServiceComponent == "Worker"
+    and tags.ServicePhase == "Stage"
+  testing_farm_staging_public_servers:
+    tags.ServiceOwner == "TFT"
+    and tags.ServiceComponent == "Server"
+    and tags.ServicePhase == "Stage"
