cleanup/ci: add removing load balancers
* Remove the `staging` from the Makefile target name, we will use this
  target for generic CI cleanup of all leftovers.

* Add a script to cleanup unusued loadbalancers from both fedora
  accounts. The current limit for loadbalancers is 20, we need to be
  careful with them, loadbalancer unavailablity will cause unexpected
  failures when for example provisioning a new dev CI cluster.

* Additional changes needed because of the target rename

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -412,18 +412,18 @@ redeploy/staging:
     - !reference [.rules, only_schedule]
     - if: '$SCHEDULED_JOB == "redeploy/staging"'
 
-cleanup/staging/ci:
+cleanup/ci:
   extends: .direnv
   stage: deploy
   script:
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
-    SCRIPT: make cleanup/staging/ci
+    SCRIPT: make cleanup/ci
   rules:
     - !reference [.rules, only_default_branch]
     - !reference [.rules, only_schedule]
-    - if: '$SCHEDULED_JOB == "cleanup/staging/ci"'
+    - if: '$SCHEDULED_JOB == "cleanup/ci"'
 
 deploy/github:
   extends: .direnv
