tests: turn timestamp into a pattern

--- a/tests/worker/public/tmt-container-secrets.yaml
+++ b/tests/worker/public/tmt-container-secrets.yaml
@@ -17,13 +17,11 @@ variables:
   PLAN: /testing-farm/sanity
 
 checks:
-  literal-strings:
-    - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:00 pass /testing-farm/script (on default-0) [1/1]"
-
   literal-patterns[citool-debug.txt]:
     - "[hide-secrets] Hiding secrets from all files under './citool-debug.txt' path"
 
   literal-patterns:
+    - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:0{{ '\\d+' }} pass /testing-farm/script (on default-0) [1/1]"
     - |
       [testing-farm-request] Initialized with {{ REQUEST_ID }}:
       {
