worker-redhat: store `rhel.repo` in a non shared path
As it turns out, the `rhel.repo` file is generated in the CWD of the
playbook directory and that is shared between the workers :facepalm:.
That just waits for the race condition to happen.

See:

https://redhat-internal.slack.com/archives/C03BRN71JAF/p1737362007713459

For more information.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
@@ -18,15 +18,11 @@
   - name: Install repos using repogen
     local_action:
       module: command
-      cmd: yumrepogen -insecure -arch={{ ansible_architecture }} -compose-id={{ compose_id.stdout }} -outfile=rhel.repo
+      cmd: yumrepogen -insecure -arch={{ ansible_architecture }} -compose-id={{ compose_id.stdout }} -outfile=/tmp/rhel.repo
   - name: Copy generated rhel.repo
     copy:
-      src: rhel.repo
+      src: /tmp/rhel.repo
       dest: /etc/yum.repos.d/rhel.repo
-      # This is needed because in some cases the file does not have expected checksum.
-      # It differs from the renamed `beaker.repo` in the previous task.
-      # We will resolve this with profiles TFT-2794.
-      force: true
   when:
     - 'ansible_distribution == "RedHat"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
