guest-setup: add missing `until` for retries
Well, just looked randomly at some job and found that no retries here.
Seems that culprit is that there is no `until` condition, so yeah,
no retries :)

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -96,6 +96,7 @@
       command: "bash -c 'curl --head -L {{ tag_repository_url }} | grep -o -E \"(200|403|404)\"'"
       retries: "{{ pkg_retry_count }}"
       delay: "{{ pkg_retry_delay }}"
+      until: http_status_code is succeeded
       register: http_status_code
 
     #
