--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -88,6 +88,7 @@
             done; true'
           retries: "{{ pkg_retry_count }}"
           delay: "{{ pkg_retry_delay }}"
+          until: output is succeeded
           register: output
 
         - name: Set tag_repository_url fact
