--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -6,6 +6,11 @@
   # DNF5 needs an early workaround
   - include_tasks: workaround-dnf5.yaml
   - include_tasks: workaround-almalinux-88.yaml
+  # centos-7, centos-8 and cetos-stream-8 workarounds need to be run before installing RH certs,
+  # otherwise instalation of ca-certificate rpm fail on invalid repos.
+  - include_tasks: workaround-centos-7.yaml
+  - include_tasks: workaround-centos-8.yaml
+  - include_tasks: workaround-centos-stream-8.yaml
   # For accessing internal network resources, certs should be installed early.
   - name: Install RH certificates
     include_tasks: install-certs.yaml
@@ -17,9 +22,6 @@
   # Workarounds
   - include_tasks: workaround-beaker-client-repo-unavailable.yaml
   - include_tasks: workaround-disable-qa-tools.yaml
-  - include_tasks: workaround-centos-7.yaml
-  - include_tasks: workaround-centos-8.yaml
-  - include_tasks: workaround-centos-stream-8.yaml
   - include_tasks: workaround-automotive.yaml
   - include_tasks: workaround-beaker-repos.yaml
   # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
