--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -5,6 +5,7 @@
   tasks:
   # DNF5 needs an early workaround
   - include_tasks: workaround-dnf5.yaml
+  - include_tasks: workaround-almalinux-88.yaml
   # For accessing internal network resources, certs should be installed early.
   - name: Install RH certificates
     include_tasks: install-certs.yaml
