Fix URL for Extras repo for CentOS8 workaround
* extras repo is enabled by default as well, which is messing with the
  entrypoint playbook
* point the URL for extras repo to vault as well

Signed-off-by: Daniel Diblik <ddiblik@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yaml
@@ -1,11 +1,22 @@
 #
 # Since CentOS 8 has reached it's EOL all the URLs migrated
 # to the 'vault'. In order to run yum update we need to
-# change the URLs of AppStream and BaseOS repository.
+# change the URLs of AppStream, BaseOS and Extras repository.
 #
 # Workaround required by convert2rhel team.
 #
 - block:
+  - name: Overwrite Extras repository
+    yum_repository:
+      name: extras
+      description: Extras repo
+      baseurl: https://vault.centos.org/$contentdir/$releasever/extras/$basearch/os/
+      state: present
+      gpgcheck: yes
+      enabled: yes
+      gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-centosofficial
+      file: CentOS-Linux-Extras
+
   - name: Overwrite AppStream repository
     yum_repository:
       name: appstream
