--- a/terragrunt/environments/production/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/production/artemis/config/variables_images.yaml
@@ -17,6 +17,14 @@ composes:
     aarch64:
       image: Fedora-Cloud-Base-AmazonEC2.aarch64-41-20250205.0
 
+  fedora_42:
+    compose: Fedora-42
+
+    x86_64:
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-42-Prerelease-20250204.2
+    aarch64:
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-42-Prerelease-20250204.2
+
   # TFT-1221
   fedora_latest:
     compose: Fedora-latest
