Disable image mode tests
The images are currently broken.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/compose-CentOS-Stream-9-image-mode-aarch64.yaml
+++ b/tests/worker/public/compose-CentOS-Stream-9-image-mode-aarch64.yaml
@@ -15,6 +15,10 @@ marks:
   - public
   - compose
 
+  - name: skip
+    reason: |
+      Image is broken currently.
+
 variables:
   REQUEST_ID: f194d3bf-2981-44e2-8641-0c759d9c9464
   COMPOSE: CentOS-Stream-9-image-mode
