--- a/tests/worker/public/compose-Fedora-40-image-mode-aarch64.yaml
+++ b/tests/worker/public/compose-Fedora-40-image-mode-aarch64.yaml
@@ -15,6 +15,10 @@ marks:
   - public
   - compose
 
+  - name: skip
+    reason: |
+      Image is broken currently.
+
 variables:
   REQUEST_ID: fc9fe637-80be-49c5-8fcb-90a8c78b3850
   COMPOSE: Fedora-40-image-mode
