Disable image mode tests
The images are currently broken.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/compose-Fedora-40-image-mode-x86_64.yaml
+++ b/tests/worker/public/compose-Fedora-40-image-mode-x86_64.yaml
@@ -15,6 +15,10 @@ marks:
   - public
   - compose
 
+  - name: skip
+    reason: |
+      Image is broken currently.
+
 variables:
   REQUEST_ID: 72148109-dccc-4d08-ab84-805049692f14
   COMPOSE: Fedora-40-image-mode
