--- a/tests/worker/public/compose-CentOS-Stream-9-image-mode-aarch64.yaml
+++ b/tests/worker/public/compose-CentOS-Stream-9-image-mode-aarch64.yaml
@@ -15,6 +15,10 @@ marks:
   - public
   - compose
 
+  - name: skip
+    reason: |
+      Image is broken currently.
+
 variables:
   REQUEST_ID: dd8769e5-f3e9-41b5-98a5-a9647e81e6db
   COMPOSE: CentOS-Stream-9-image-mode
