--- a/tests/worker/public/compose-CentOS-Stream-9-image-mode-x86_64.yaml
+++ b/tests/worker/public/compose-CentOS-Stream-9-image-mode-x86_64.yaml
@@ -15,6 +15,10 @@ marks:
   - public
   - compose
 
+  - name: skip
+    reason: |
+      Image is broken currently.
+
 variables:
   REQUEST_ID: 0fe3a8a6-8d36-4d5a-b8a4-7c486b3920f5
   COMPOSE: CentOS-Stream-9-image-mode
