--- a/tests/worker/public/compose-Fedora-40-image-mode-aarch64.yaml
+++ b/tests/worker/public/compose-Fedora-40-image-mode-aarch64.yaml
@@ -15,6 +15,10 @@ marks:
   - public
   - compose
 
+  - name: skip
+    reason: |
+      Image is broken currently.
+
 variables:
   REQUEST_ID: e06cedb8-c80d-4853-8ed5-5484652337b7
   COMPOSE: Fedora-40-image-mode
