--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ---
 default:
-  image: quay.io/testing-farm/python-ci-image:2023-06-01-ec6b0f31
+  image: quay.io/testing-farm/python-ci-image:latest
 
 variables:
   # GitLab CI runs in world writable directory, we need to explicitely set ANSIBLE_CONFIG
