--- a/tests/worker/public/tmt-x86_64-fedora-copr-build.yaml
+++ b/tests/worker/public/tmt-x86_64-fedora-copr-build.yaml
@@ -4,10 +4,13 @@ marks:
   - public
   - pipeline
 
+variables:
+  REQUEST_ID: b725ad5c-6e41-49c1-bdfe-a6a5a72ddae1
+
 pipeline: |
   hide-secrets
   rules-engine
-  testing-farm-request --request-id 59274f1b-4c6d-4a3d-9bd0-c35ab0b5b394
+  testing-farm-request --request-id {{ REQUEST_ID }}
   ansible
   artemis
   fedora-copr:copr
@@ -36,7 +39,7 @@ checks:
 
   literal-patterns:
     - "[testing-farm-request] Connected to Testing Farm Service '{{ testing_farm_public_api_url }}', '{{ testing_farm_internal_api_url }}'"
-    - "[coldstore] For the pipeline artifacts, see {{ artifacts_url_pattern }}/59274f1b-4c6d-4a3d-9bd0-c35ab0b5b394"
+    - "[coldstore] For the pipeline artifacts, see {{ artifacts_url_pattern }}/{{ REQUEST_ID }}"
     - "[artemis] [{{ artemis_guestname_pattern }}] Guest is being provisioned"
     - "[artemis] [{{ artemis_guestname_pattern }}] Guest is ready"
     - "[artemis] [{{ artemis_guestname_pattern }}] Guest has become alive"
