--- a/.pre-commit-config-maintainer.yaml
+++ b/.pre-commit-config-maintainer.yaml
@@ -60,6 +60,7 @@ repos:
       - id: terraform_fmt
         args:
           - --args=-diff
+          - --hook-config=--parallelism-ci-cpu-cores=4
       - id: terraform_tflint
       - id: terraform_tfsec
         exclude: |
