--- a/ansible/inventory/group_vars/testing_farm_redhat_servers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_redhat_servers.yaml
@@ -11,6 +11,6 @@ nomad_bootstrap_expect: 1
 nomad_use_consul: false
 nomad_servers: testing-farm-nomad-server-01
 
-# ssh key
+# ssh key test
 ssh_private_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_redhat_server"
 ssh_public_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_redhat_server.pub"
