--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -11,6 +11,7 @@
   - include_tasks: workaround-centos-7.yaml
   - include_tasks: workaround-centos-8.yaml
   - include_tasks: workaround-centos-stream-8.yaml
+  - include_tasks: workaround-rhel-8.yaml
   # For accessing internal network resources, certs should be installed early.
   - name: Install RH certificates
     include_tasks: install-certs.yaml
